@@ -86,6 +86,7 @@ static const struct s_opt       opts[POCC_NB_OPTS] =
   { '\0', "use-past", 0, "\tUse the PAST back-end [off]" },
   { '\0', "pragmatizer", 0, "\tUse the AST pragmatizer [off]" },
   { '\0', "ptile", 0, "\tUse PTile for parametric tiling [off]" },
+  { '\0', "ptile-fts", 0, "\tUse full-tile separation in PTile [off]" },
   { '\0', "punroll", 0, "\tUse PAST loop unrolling [off]" },
   { '\0', "register-tiling", 0, "PAST register tiling [off]" },
   { '\0', "punroll-size", 1, "\t PAST unrolling size [4]" },
@@ -163,6 +164,7 @@ static const struct s_opt       opts[POCC_NB_OPTS] =
   { '\0', "use-past", 0, "\tUse the PAST back-end [off]" },
   { '\0', "pragmatizer", 0, "\tUse the AST pragmatizer [off]" },
   { '\0', "ptile", 0, "\tUse PTile for parametric tiling [off]" },
+  { '\0', "ptile-fts", 0, "\tUse full-tile separation in PTile [off]" },
   { '\0', "punroll", 0, "\tUse PAST loop unrolling [off]" },
   { '\0', "register-tiling", 0, "PAST register tiling [off]" },
   { '\0', "punroll-size", 0, "\tPAST unrolling size [4]" },
@@ -579,6 +581,13 @@ pocc_getopts (s_pocc_options_t* options, int argc, char** argv)
   // PTile options.
   if (opt_tab[POCC_OPT_PTILE])
     {
+      options->ptile = 1;
+      options->use_past = 1;
+    }
+  // PTile options.
+  if (opt_tab[POCC_OPT_PTILE_FTS])
+    {
+      options->ptile_fts = 1;
       options->ptile = 1;
       options->use_past = 1;
     }
